compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__imports__import_value_as_submodule2.snap
---
source: compiler-core/src/type_/tests/imports.rs
expression: "\n        import one/two/wibble\n        "
---
error: Unknown module
  ┌─ /src/one/two.gleam:2:9
  │
2 │         import one/two/wibble
  │         ^^^^^^^^^^^^^^^^^^^^^

No module has been found with the name `one/two/wibble`.
Hint: Maybe you meant `import one/two.{wibble}`?
